# Learning_First

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/collisions/: CMakeLists.txt
src/components/: CMakeLists.txt
src/components/include/components/: Track.hpp  Vehicle.hpp
src/game/: CMakeLists.txt
src/game/include/game/driver/: Bot.hpp  Driver.hpp  KeyboardInput.hpp
src/game/include/game/engine/: Core.hpp  DistanceMeter.hpp  Engine.hpp  TexturesLoader.hpp
src/game/include/game/environment/: Car.hpp  Environment.hpp  Track.hpp
src/game/include/game/objects/: Car.hpp  Track.hpp
src/game/src/driver/: KeyboardInput.cpp
src/game/src/engine/: Core.cpp  Engine.cpp
src/helpers/: CMakeLists.txt
src/helpers/include/helpers/: Collision.hpp  NarrowedValue.hpp  exceptions.hpp  math.hpp
src/helpers/src/: Collision.cpp
src/learning-first-engine/: CMakeLists.txt
src/learning-first-engine/include/engine/: Car.hpp  Engine.hpp  Map.hpp  make_map.hpp
src/models/: CMakeLists.txt
src/models/include/models/: Drawable.hpp  DriverInterface.hpp  Track.hpp  Vehicle.hpp
src/models/src/: Drawable.cpp  DriverInterface.cpp  Track.cpp  Vehicle.cpp
src/physics/: CMakeLists.txt
src/physics/include/physics/models/: RigidBody.hpp  Track.hpp  Vehicle.hpp
src/physics/include/physics/processing/: BasicProcessing.hpp  processing.hpp
src/physics/src/models/: RigidBody.cpp
src/physics/src/processing/: BasicProcessing.cpp
